--- a/res/xml/navigation_examples.xml
+++ b/res/xml/navigation_examples.xml
@@ -7,6 +7,11 @@
     	<Preference
     	    android:title="@string/get_sys_info"
     	    android:key="sys_info" />
+    	
+		<Preference
+		    android:title="@string/memory_title"
+		    android:key="mem_info" />
+        
         
 
 </PreferenceScreen>
